--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Access-Control-Allow-Origin = "https://nmess.soon.it"
+    Access-Control-Allow-Origin = "https://nmess.soon.it", "https://nmess.okzk.com"
     Access-Control-Allow-Credentials = "true"
